# Informatik-Quiz

./: .gitignore  LICENSE  README.md  dune-project  flake.nix  go.mod  go.sum  informatikquizbiber.cabal  informatikquizbiber.opam  main.go
src/: dune  main.ml  scoreboard.eml.html
views/: board.html  form.html  scoreboard.html
web/: exercise.html  index.html  result.html  scoreboard.html
web/css/: style.css
web/exercises/: exercises.json
web/js/: main_page.js  random_exercise.js  result.js  stats.js
