cabal-version:   3.0
name:            informatikquizbiber
version:         0.1.0.0
license:         GPL-3.0-or-later
author:          cn1t
build-type:      Simple

common warnings
    ghc-options: -Wall

executable haskell-flake
    import:           warnings
    main-is:          Main.hs
    build-depends: base 
--, yesod
    hs-source-dirs:   src
    default-language: Haskell2010
